consume button text alignment fix

--- a/src/components/organisms/AssetActions/Compute/FormComputeDataset.module.css
+++ b/src/components/organisms/AssetActions/Compute/FormComputeDataset.module.css
@@ -5,7 +5,7 @@
 }
 
 .form > div > label,
-[class*='ButtonBuy-module--actions'] {
+.form [class*='ButtonBuy-module--actions'] {
   text-align: center;
 }
 
